--- a/apps/templates/_home/_featured_collections.html
+++ b/apps/templates/_home/_featured_collections.html
@@ -1,6 +1,6 @@
 <div class="uk-section uk-section-default uk-padding-remove-top">
     <div class="uk-container">
-        <h2 class="uk-text-large uk-text-bold">Featured Volumes <span><a class="text-anchor">(See All Volumes)</a></span></h2>
+        <h2 class="uk-text-large uk-text-bold">Featured Collections <span><a class="text-anchor">(See All Collections)</a></span></h2>
         
         <div uk-slider>
             <div class="uk-position-relative">
@@ -12,35 +12,35 @@
                                 <h2>[Culpeper's complete herbal: with nearly four hundred medicines]</h2>
                                 
                             </a>
-                            <div class="color-black">1653</div>
+                            <div class="color-black">8 Volumes</div>
                         </div>
                         <div class="uk-panel">
                             <a href="#" class="volume-item">
                                 <img src="https://via.placeholder.com/150x200" alt="Volume 1">
                                 <h2>[Culpeper's complete herbal: with nearly four hundred medicines]</h2>
                             </a>
-                            <div class="color-black">1653</div>
+                            <div class="color-black">12 Volumes</div>
                         </div>
                         <div class="uk-panel">
                             <a href="#" class="volume-item">
                                 <img src="https://via.placeholder.com/150x200" alt="Volume 1">
                                 <h2>[Culpeper's complete herbal: with nearly four hundred medicines]</h2>
                             </a>
-                            <div class="color-black">1653</div>
+                            <div class="color-black">20 Volumes</div>
                         </div>
                         <div class="uk-panel">
                             <a href="#" class="volume-item">
                                 <img src="https://via.placeholder.com/150x200" alt="Volume 1">
                                 <h2>[Culpeper's complete herbal: with nearly four hundred medicines]</h2>
                             </a>
-                            <div class="color-black">1653</div>
+                            <div class="color-black">29 Volumes</div>
                         </div>
                         <div class="uk-panel">
                             <a href="#" class="volume-item">
                                 <img src="https://via.placeholder.com/150x200" alt="Volume 1">
                                 <h2>[Culpeper's complete herbal: with nearly four hundred medicines]</h2>
                             </a>
-                            <div class="color-black">1653</div>
+                            <div class="color-black">98 Volumes</div>
                         </div>
                         <div class="uk-panel">
                             <a href="#" class="volume-item">
@@ -48,7 +48,7 @@
                                 <h2>[Culpeper's complete herbal: with nearly four hundred medicines]</h2>
                                 
                             </a>
-                            <div class="color-black">1653</div>
+                            <div class="color-black">82 Volumes</div>
                         </div>
                     </div>
                 </div>
