--- a/apps/templates/_home/_footer.html
+++ b/apps/templates/_home/_footer.html
@@ -1,17 +1,21 @@
+{% load static %}
 <div class="footer">
-  <div class="footer-content">
-      <div class="footer-links">
-          <a href="#">What Is Readux?</a>
-          <a href="#">What Is Sounding Spirit?</a>
-          <a href="#">Terms of Service</a>
-      </div>
-      <div class="footer-logo">
-          <a href="https://ecds.emory.edu">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="#fff"/></svg>
-          </a>
-      </div>
-  </div>
-  <div class="footer-bottom">
-      Engage with digitized print materials on an open source software platform and share new thinking.
-  </div>
+    <div class="uk-container">
+        <div class="footer-content uk-flex uk-flex-middle uk-flex-between">
+            <div class="footer-links uk-flex uk-flex-column uk-flex-center">
+                <a href="#">What Is Readux?</a>
+                <a href="#">What Is Sounding Spirit?</a>
+                <a href="#">Terms of Service</a>
+            </div>
+            <div class="footer-logo">
+                <a href="https://ecds.emory.edu">
+                    <img src="{% static 'images/ecds-inverse.svg' %}" alt="Logo" style="height: 10vh;">
+
+                </a>
+            </div>
+        </div>
+        <div class="footer-bottom uk-margin-top">
+            Engage with digitized print materials on an open source software platform and share new thinking.
+        </div>
+    </div>
 </div>
