--- a/apps/templates/_home/_highlights.html
+++ b/apps/templates/_home/_highlights.html
@@ -3,7 +3,7 @@
       <h2 class="section-title">What Can I Do with Readux?</h2>
       <div class="uk-child-width-1-3@m uk-grid-small uk-grid-match" uk-grid>
           <div style="padding: 0 3rem;">
-              <div class="uk-card uk-card-default column">
+              <div class="uk-card  column">
                   <div class="blob">
                       <svg class="icon-placeholder" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#000000"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C8.13 2 5 5.13 5 9c0 1.74.56 3.34 1.5 4.65L12 22l5.5-8.35C18.44 12.34 19 10.74 19 9c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z"/></svg>
                   </div>
@@ -13,7 +13,7 @@
               </div>
           </div>
           <div style="padding:0 3rem;">
-              <div class="uk-card uk-card-default column">
+              <div class="uk-card  column">
                   <div class="blob">
                       <svg class="icon-placeholder" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#000000"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C8.13 2 5 5.13 5 9c0 1.74.56 3.34 1.5 4.65L12 22l5.5-8.35C18.44 12.34 19 10.74 19 9c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z"/></svg>
                   </div>
@@ -23,7 +23,7 @@
               </div>
           </div>
           <div style="padding:0 3rem;">
-              <div class="uk-card uk-card-default column">
+              <div class="uk-card  column">
                   <div class="blob">
                       <svg class="icon-placeholder" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#000000"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C8.13 2 5 5.13 5 9c0 1.74.56 3.34 1.5 4.65L12 22l5.5-8.35C18.44 12.34 19 10.74 19 9c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z"/></svg>
                   </div>
