--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -13,14 +13,14 @@
 <div class="landing">
   <div class="overlay"></div>
   <div class="content">
-    {% include '_home/_nav.html' %}
-    {% include '_home/_hero.html' %}
-    {% include '_home/_featured_story.html' %}
-    {% include '_home/_featured_volumes.html' %}
-    {% include '_home/_featured_volumes.html' %}
-    {% include '_home/_video.html' %}
-    {% include '_home/_highlights.html' %}
-    {% include '_home/_footer.html' %}
+      {% include '_home/_nav.html' %}
+      {% include '_home/_hero.html' %}
+      {% include '_home/_featured_story.html' %}
+      {% include '_home/_featured_volumes.html' %}
+      {% include '_home/_featured_collections.html' %}
+      {% include '_home/_video.html' %}
+      {% include '_home/_highlights.html' %}
+      {% include '_home/_footer.html' %}
   </div>
 </div>
 {% endif %}
