revise volumes_page

--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -53,24 +53,29 @@
     <!-- Volume Item -->
     <a href="#" class="volume-item">
         <img src="https://via.placeholder.com/150x200" alt="Volume 1">
-        <h2>[Culpeper's complete herbal: with nearly four hundred medicines (1653)]</h2>
+        <h2>[Culpeper's complete herbal: with nearly four hundred medicines]</h2>
+        <div class="color-black">1653</div>
     </a>
     <!-- Repeat the volume item block for additional volumes -->
     <a href="#" class="volume-item">
         <img src="https://via.placeholder.com/150x200" alt="Volume 2">
-        <h2>[Il nuovo teatro delle fabbriche, et edificii, in prospettiva di Roma moderna. 5 vols. (1725)]</h2>
-    </a>
+        <h2>[Il nuovo teatro delle fabbriche, et edificii, in prospettiva di Roma moderna. 5 vols.]</h2>
+        <div class="color-black">1663</div>
+      </a>
     <a href="#" class="volume-item">
         <img src="https://via.placeholder.com/150x200" alt="Volume 3">
-        <h2>[Magnenij Rabani Mauri de laudi[Bus] Sancte Crucis opus (1785)]</h2>
+        <h2>[Magnenij Rabani Mauri de laudi[Bus] Sancte Crucis opus]</h2>
+        <div class="color-black">1233</div>
     </a>
     <a href="#" class="volume-item">
         <img src="https://via.placeholder.com/150x200" alt="Volume 4">
-        <h2>[Breue racconto della trasportatione del corpo di Papa Paolo V (1590)]</h2>
+        <h2>[Breue racconto della trasportatione del corpo di Papa Paolo V]</h2>
+        <div class="color-black">1590</div>
     </a>
     <a href="#" class="volume-item">
         <img src="https://via.placeholder.com/150x200" alt="Volume 5">
-        <h2>[Breue racconto della trasportatione del corpo di Papa Paolo V (1590)]</h2>
+        <h2>[Breue racconto della trasportatione del corpo di Papa Paolo V]</h2>
+        <div class="color-black">1590</div>
     </a>
   </div>
 </div>
