--- a/apps/templates/admin/base.html
+++ b/apps/templates/admin/base.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.17.0/css/uikit.min.css" />
     <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
     <link type="text/css" href="{% sass_src 'css/project.scss' %}" rel="stylesheet">
-    <link type="text/css" href="{% sass_src 'css/readux2.scss' %}" rel="stylesheet">
+    <link type="text/css" href="{% sass_src 'css/readux2/main.scss' %}" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.17.0/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.17.0/js/uikit-icons.min.js"></script>
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
