--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -82,7 +82,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.17.0/css/uikit.min.css" />
     <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
     <!-- <link type="text/css" href="{% sass_src 'css/project.scss' %}" rel="stylesheet"> -->
-    <link type="text/css" href="{% sass_src 'css/readux2.scss' %}" rel="stylesheet">
+    <link type="text/css" href="{% sass_src 'css/readux2/main.scss' %}" rel="stylesheet">
     <!-- <link type="text/css" href="css/project.scss" rel="stylesheet"> -->
 
     <style>
