revamp search page

--- a/apps/static/css/readux2/main.scss
+++ b/apps/static/css/readux2/main.scss
@@ -100,6 +100,10 @@
     color: black;
 }
 
+.color-blue {
+    color: #1D3557;
+}
+
 /* Overrides */
 .uk-slidenav {
     color: rgba(29, 53, 87, 0.6); /* Override the default colors with the blue */
