--- a/apps/templates/snippets/pagination.html
+++ b/apps/templates/snippets/pagination.html
@@ -1,18 +1,18 @@
 {% load url_replace %}
 
 <!--TODO: move inline styles into project CSS-->
-    <span class="step-links">
-        {% if page_obj.has_previous %}
-            <a href="?{% url_replace page=1 %}" style="margin-right:5px;">&laquo; first</a>
-            <a href="?{% url_replace page=page_obj.previous_page_number %}" style="margin-right:5px;">previous</a>
-        {% endif %}
+<span class="step-links uk-margin-top uk-margin-bottom">
+    {% if page_obj.has_previous %}
+        <a href="?{% url_replace page=1 %}" class="uk-margin-small-right">&laquo; first</a>
+        <a href="?{% url_replace page=page_obj.previous_page_number %}" class="uk-margin-small-right">previous</a>
+    {% endif %}
 
-        <span class="current" style="margin:0px,5px;">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-        </span>
-
-        {% if page_obj.has_next %}
-            <a href="?{% url_replace page=page_obj.next_page_number %}" style="margin-left:5px;">next</a>
-            <a href="?{% url_replace page=page_obj.paginator.num_pages %}" style="margin-left:5px;">last &raquo;</a>
-        {% endif %}
+    <span class="current">
+        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
     </span>
+
+    {% if page_obj.has_next %}
+        <a href="?{% url_replace page=page_obj.next_page_number %}" class="uk-margin-small-left">next</a>
+        <a href="?{% url_replace page=page_obj.paginator.num_pages %}" class="uk-margin-small-left">last &raquo;</a>
+    {% endif %}
+</span>
