--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -11,7 +11,7 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-<link type="text/css" href="{% sass_src 'css/menu-inverse.scss' %}" rel="stylesheet">
+<link type="text/css" href="{% sass_src 'css/readux2/menu-inverse.scss' %}" rel="stylesheet">
 
 {% include '_home/_nav.html' %}
 
