--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -45,12 +45,24 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-<link type="text/css" href="{% sass_src 'css/menu-inverse.scss' %}" rel="stylesheet">
-<link type="text/css" href="{% sass_src 'css/project.scss' %}" rel="stylesheet">
+<link type="text/css" href="{% sass_src 'css/readux2/search.scss' %}" rel="stylesheet">
+<link type="text/css" href="{% sass_src 'css/readux2/main.scss' %}" rel="stylesheet">
+<link type="text/css" href="{% sass_src 'css/readux2/menu-inverse.scss' %}" rel="stylesheet">
+
+<!-- <link type="text/css" href="{% sass_src 'css/project.scss' %}" rel="stylesheet"> -->
 
 {% include '_home/_nav.html' %}
 
 <div class="uk-container">
+
+    <!-- Breadcrumb -->
+  <ul class="breadcrumb uk-margin-small-top uk-margin-bottom">
+    <li><a href="/">Home</a></li>
+    <li>Search</li>
+  </ul>
+  <!-- End -->
+
+
 <form
     id="search-form"
     action="{% url 'search' %}"
@@ -67,16 +79,16 @@
                 <!-- <span uk-search-icon></span> -->
                 <input class="uk-search-input" type="search" value="{{form.q.value|default_if_none:''}}" id="{{form.q.id}}" placeholder="Search volumes by keyword" aria-label="Search volumes by keyword" name="q">
             </div>
-            <!-- <div class="uk-text-small uk-margin-small-left">{{ form.q.label }}</div> -->
+            <!-- <div class="uk-text-small">{{ form.q.label }}</div> -->
         </fieldset>
         <fieldset class="uk-width-auto uk-padding-remove-left">
-            <button class="uk-button uk-button-default" style="background-color: #950953; color: white; padding: 0 9px; border:none; height: 40px;" type="submit">
-                <span uk-icon="icon:search" style="position: relative; top: 3px;"></span>
+            <button class="uk-button uk-button-default" style="background-color: #E60000; color: white; padding: 0 9px; border:none; height: 40px;" type="submit">
+                <span uk-icon="icon:search"></span>
             </button>
         </fieldset>
         <fieldset>
             {{ form.sort }}
-            <!-- <div class="uk-text-small uk-margin-small-left">{{ form.sort.label }}</div> -->
+            <!-- <div class="uk-text-small">{{ form.sort.label }}</div> -->
         </fieldset>
     </div>
 
@@ -88,28 +100,28 @@
         >
 
             <fieldset class="uk-margin-remove-top uk-margin-small-bottom">
-                <div class="uk-flex uk-flex-between sui-item-heading uk-margin-small-left">
+                <div class="uk-flex uk-flex-between sui-item-heading">
                     <label >{{ form.collection.label }}</label>
                 </div>
                 {{ form.collection }}
             </fieldset>
 
             <fieldset class="uk-margin-remove-top uk-margin-small-bottom">
-                <div class="uk-flex uk-flex-between sui-item-heading uk-margin-small-left">
+                <div class="uk-flex uk-flex-between sui-item-heading">
                     <label >{{ form.author.label }}</label>
                 </div>
                 {{ form.author }}
             </fieldset>
 
             <fieldset class="uk-margin-remove-top uk-margin-small-bottom">
-                <div class="uk-flex uk-flex-between sui-item-heading uk-margin-small-left">
+                <div class="uk-flex uk-flex-between sui-item-heading">
                     <label >{{ form.language.label }}</label>
                 </div>
                 {{ form.language }}
             </fieldset>
 
             <fieldset class="uk-margin-remove-top uk-margin-small-bottom">
-                <div class="uk-flex uk-flex-between sui-item-heading uk-margin-small-left">
+                <div class="uk-flex uk-flex-between sui-item-heading">
                     <label >Filter by Date published</label>
                     <input type="checkbox" name="date-filter" id="toggle-date" class="uk-checkbox uk-margin-remove"/>
                 </div>
@@ -125,7 +137,7 @@
             {% for key in CUSTOM_METADATA_KEYS %}
                 <fieldset class="uk-margin-remove-top uk-margin-small-bottom">
                     {% with form|dict_item:key as field %}
-                        <div class="uk-flex uk-flex-between sui-item-heading uk-margin-small-left">
+                        <div class="uk-flex uk-flex-between sui-item-heading">
                             <label>{{ field.label }}</label>
                         </div>
                         {{ field }}
@@ -139,17 +151,17 @@
             </fieldset>
         </div>
         
-        <div class="uk-width-expand@m">
+        <div class="uk-width-expand@m uk-padding-remove">
             <div uk-grid class="uk-flex uk-flex-between uk-margin-small-bottom">
                 <div class="sui-item-heading" >{{ volumes.count }} result{{ volumes.count|pluralize }}</div>
                 <div class="sui-item-heading">{% include "snippets/pagination.html" %}</div>
             </div>
-            <ul class="uk-flex uk-flex-column uk-list-divider" id="search-results">
+            <ul class="uk-flex uk-flex-column uk-list-divider uk-padding-remove-left uk-margin-remove" id="search-results">
                 {% for volume in volumes %}
                     {% include "snippets/volume_result.html" %}
                 {% endfor %}
             </ul>
-            <div class="uk-flex uk-flex-center">
+            <div class="uk-margin-bottom uk-margin-top sui-item-heading">
                 {% include "snippets/pagination.html" %}
             </div>
         </div>
