--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -83,6 +83,7 @@
     <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
     <!-- <link type="text/css" href="{% sass_src 'css/project.scss' %}" rel="stylesheet"> -->
     <link type="text/css" href="{% sass_src 'css/readux2/main.scss' %}" rel="stylesheet">
+    <link type="text/css" href="{% sass_src 'css/readux2/login.scss' %}" rel="stylesheet">
     <!-- <link type="text/css" href="css/project.scss" rel="stylesheet"> -->
 
     <style>
