--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -4,7 +4,7 @@
 {% load has_user_annotations %}
 {% load user_annotation_count %}
 {% block content %}
-<link type="text/css" href="{% sass_src 'css/menu-inverse.scss' %}" rel="stylesheet">
+<link type="text/css" href="{% sass_src 'css/readux2/menu-inverse.scss' %}" rel="stylesheet">
 
 {% include '_home/_nav.html' %}
 <style>
