--- a/apps/templates/_home/_hero.html
+++ b/apps/templates/_home/_hero.html
@@ -1,6 +1,7 @@
+{% load wagtailcore_tags %}
 <div class="uk-container uk-text-center hero">
     <h1 class="uk-heading-primary" style="color: white; font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">
-        Sounding Spirit</h1>
-    <p class="uk-text-lead" style="color: white; ">where sacred songbooks meet digital innovation</p>
+        {{ page.title }}</h1>
+    <p class="uk-text-lead" style="color: white; ">{{ page.tagline|richtext }}</p>
     {% include "snippets/_search_box.html" %}
 </div>
