--- a/apps/templates/_home/_nav.html
+++ b/apps/templates/_home/_nav.html
@@ -1,11 +1,9 @@
-
-
 <nav class="uk-navbar-container" style="background:none;">
     <div class="uk-container">
         <div uk-navbar="mode: click">
             <div class="uk-navbar-left">
                 <div class="uk-logo">
-                    <div><a class="brand-logo" href="/">Sounding Spirit</a></div>
+                    <div><a class="brand-logo" href="/">{{ request.site.name }}</a></div>
                     <div class="brand-tagline">built on <a class="brand-readux">Readux</a></div>
                 </div>
 
