Allow new and old CSS to coexist

--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -3656,3 +3656,9 @@ ol#search-results dl {
 // }
 /*# sourceMappingURL=project.css.map */
 
+
+// NOTE: Migrated from templates/page.html
+#v-readux.uk-container {
+  padding: 0;
+  max-width: none;
+}
