--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -14,8 +14,12 @@
       {% include '_home/_nav.html' %}
       {% include '_home/_hero.html' %}
       {% include '_home/_featured_story.html' %}
-      {% include '_home/_featured_volumes.html' %}
-      {% include '_home/_featured_collections.html' %}
+      {% if page.featured_volumes.all.count != 0 %}
+        {% include '_home/_featured_volumes.html' %}
+      {% endif %}
+      {% if page.featured_collections.all.count != 0 %}
+        {% include '_home/_featured_collections.html' %}
+      {% endif %}
       {% include '_home/_video.html' %}
       {% include '_home/_highlights.html' %}
       {% include '_home/_footer.html' %}
