Link to all volumes page in nav

--- a/apps/templates/_home/_nav.html
+++ b/apps/templates/_home/_nav.html
@@ -11,7 +11,7 @@
 
                 <ul class="uk-navbar-nav">
                     <li class=""><a href="/all-collections/" class="menu-item">Collections</a></li>
-                    <li class=""><a href="/all-volumes/" class="menu-item">Volumes</a></li>
+                    <li class=""><a href="{% url 'volumes list' %}" class="menu-item">Volumes</a></li>
                     <li>
                         <a href="#" class="menu-item">About <span uk-drop-parent-icon></span></a>
                         <div class="uk-navbar-dropdown uk-padding-remove"
