--- a/apps/templates/menus/main_menu.html
+++ b/apps/templates/menus/main_menu.html
@@ -1,9 +1,21 @@
 {% load menu_tags %}
 {% if menu_items %}
-  <ul class="uk-navbar-nav rx-navbar-nav">
+  <ul class="uk-navbar-nav">
     {% for item in menu_items %}
       <li>
-        <a href="{{ item.href }}" class="rx-nav-item">{{ item.text }}</a> {% if item.has_children_in_menu %}{% sub_menu item %}{% endif %}
+        {% if item.sub_menu %}
+          <a href="#" class="menu-item">{{ item.text }} <span uk-drop-parent-icon></span></a>
+          <div class="uk-navbar-dropdown uk-padding-remove"
+              uk-dropdown="mode: click; pos: bottom-left; offset: -20;">
+              <ul class="uk-nav uk-navbar-dropdown-nav">
+                  {% for sub_item in item.sub_menu.items %}
+                  <li class="{{ sub_item.active_class }}"><a href="{{ sub_item.href }}">{{ sub_item.text }}</a></li>
+                  {% endfor %}
+              </ul>
+          </div>
+        {% else %}
+          <a href="{{ item.href }}" class="menu-item">{{ item.text }}</a>
+        {% endif %}
       </li>
     {% endfor %}
   </ul>
