minor edit to revert accidental design change

--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -36,8 +36,8 @@
 
   <!-- Page title & text lead -->
   <h1 class="page-title uk-margin-top uk-margin-remove-bottom">{{ page.page_title|default:page.title }}</h1>
-  <p class="page-text-lead uk-margin-small-top">{{ page.tagline }}</p>
-  <p class="uk-margin-small-top">{{ page.paragraph }}</p>
+  <p class="page-text-lead">{{ page.tagline }}</p>
+  <p class="page-text-lead uk-margin-small-top">{{ page.paragraph }}</p>
   <!-- End -->
 
 
