--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -51,10 +51,10 @@
         <!-- Volume Item -->
         <a class="volume-item" href="{% url 'volumeall' volume.pid %}">
             <img src="{{ volume.canvas_set.first.thumbnail_crop_volume }}" alt="First page of {{volume.label}}" onerror="this.onerror=null;this.src='{% static '/images/image_not_found.jpg' %}';">
-            <h2>{{ volume.label|default:"[no title]" }}</h2>
+            <h2>{{ volume.label|default:"[no title]"|truncatechars:200 }}</h2>
             {% if volume.published_date %}<div class="color-black">{{ volume.published_date }}</div>{% endif %}
-            {% if volume.author %}<div class="color-black">{{ volume.author }}</div>{% endif %}
-            <div class="color-black">Added {{volume.created_at}}</div>
+            {% if volume.author %}<div class="color-black">{{ volume.author|truncatechars:150 }}</div>{% endif %}
+            <div class="color-black">Added {{ volume.created_at }}</div>
         </a>
       {% empty %}
         There are no volumes available to browse.
