adjust how the css stylesheets are loaded as we transition to the new readux ui

--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -11,10 +11,10 @@
   --contrast: 200%;
 }
 
-.uk-input {
-  border-width: 3px;
-  width: 50%;
-}
+// .uk-input {
+//   border-width: 3px;
+//   width: 50%;
+// }
 
 .uk-link, a {
   color: var(--link-color);
@@ -1718,10 +1718,10 @@ fieldset {
   --contrast: 200%;
 }
 
-.uk-input {
-  border-width: 3px;
-  width: 50%;
-}
+// .uk-input {
+//   border-width: 3px;
+//   width: 50%;
+// }
 
 .uk-link, a {
   color: var(--link-color);
