--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -81,7 +81,9 @@
     {% block css %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.17.0/css/uikit.min.css" />
     <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
-    <link type="text/css" href="{% sass_src 'css/project.scss' %}" rel="stylesheet">
+    <!-- <link type="text/css" href="{% sass_src 'css/project.scss' %}" rel="stylesheet"> -->
+    <link type="text/css" href="{% sass_src 'css/readux2/main.scss' %}" rel="stylesheet">
+    <link type="text/css" href="{% sass_src 'css/readux2/migration.scss' %}" rel="stylesheet">
     <link type="text/css" href="{% sass_src 'css/readux2/login.scss' %}" rel="stylesheet">
     {% endblock %}
     {% block extra_css %}{% endblock extra_css %}
