--- a/apps/templates/cms/content_page.html
+++ b/apps/templates/cms/content_page.html
@@ -5,6 +5,8 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
+<link type="text/css" href="{% sass_src 'css/readux2/main.scss' %}" rel="stylesheet">
+<link type="text/css" href="{% sass_src 'css/readux2/login.scss' %}" rel="stylesheet">
 <link type="text/css" href="{% sass_src 'css/readux2/menu-inverse.scss' %}" rel="stylesheet">
 <link type="text/css" href="{% sass_src 'css/readux2/static.scss' %}" rel="stylesheet">
 
