--- a/apps/templates/cms/volumes_page.html
+++ b/apps/templates/cms/volumes_page.html
@@ -12,6 +12,7 @@
 
 {% block content %}
 
+<link type="text/css" href="{% sass_src 'css/readux2/main.scss' %}" rel="stylesheet">
 <link type="text/css" href="{% sass_src 'css/readux2/menu-inverse.scss' %}" rel="stylesheet">
 
 {% include '_home/_nav.html' %}
